--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">PaymentsTest</string>
+
+    <string name="login_account">Log in to your account</string>
+
+    <string name="login">Login</string>
+    <string name="password">Password</string>
+
+    <string name="logon">Login</string>
+
+    <string name="edit_text_empty_error">The field cannot be empty</string>
 </resources>
