--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="logon">Login</string>
 
     <string name="edit_text_empty_error">The field cannot be empty</string>
+    <string name="invalid_credentials">Invalid credentials</string>
 </resources>
