--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,7 @@
     <string name="invalid_credentials">Invalid credentials</string>
 
     <string name="payments">Payments</string>
+    
+    <string name="no_connection">There is no network connection</string>
+    <string name="refresh">Refresh</string>
 </resources>
