--- a/paymentscompose/src/main/res/values/strings.xml
+++ b/paymentscompose/src/main/res/values/strings.xml
@@ -1,3 +1,20 @@
 <resources>
-    <string name="app_name">PaymentsCompose</string>
+    <string name="app_name">PaymentsTest</string>
+
+    <string name="login_account">Log in to your account</string>
+
+    <string name="login">Login</string>
+    <string name="password">Password</string>
+
+    <string name="logon">Login</string>
+
+    <string name="edit_text_empty_error">The field cannot be empty</string>
+    <string name="invalid_credentials">Invalid credentials</string>
+
+    <string name="payments">Payments</string>
+    
+    <string name="no_connection">There is no network connection</string>
+    <string name="refresh">Refresh</string>
+
+    <string name="unexpected_error">Unexpected error</string>
 </resources>
